<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewRoutesRouteSelected">

    <Button
        android:id="@+id/deleteViewRouteSelected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/LightGrey"
        android:text="@string/delete_route"
        android:textColor="#455A64"
        app:layout_constraintBottom_toTopOf="@id/mapViewRouteSelected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/mapViewRouteSelected"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/deleteViewRouteSelected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/minutesViewRouteSelected"
        />

    <EditText
        android:id="@+id/minutesViewRouteSelected"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/minutes"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/saveViewRouteSelected"
        app:layout_constraintEnd_toStartOf="@id/minViewRouteSelected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mapViewRouteSelected"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/minViewRouteSelected"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/min"
        android:textAlignment="center"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/saveViewRouteSelected"
        app:layout_constraintEnd_toStartOf="@id/secondsViewRouteSelected"
        app:layout_constraintStart_toEndOf="@id/minutesViewRouteSelected"
        app:layout_constraintTop_toBottomOf="@id/mapViewRouteSelected" />

    <EditText
        android:id="@+id/secondsViewRouteSelected"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/sec"
        android:inputType="number"
        android:textAlignment="center"
        android:maxLength="2"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/saveViewRouteSelected"
        app:layout_constraintEnd_toStartOf="@id/secViewRouteSelected"
        app:layout_constraintStart_toEndOf="@id/minViewRouteSelected"
        app:layout_constraintTop_toBottomOf="@id/mapViewRouteSelected"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/secViewRouteSelected"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sec"
        android:textAlignment="center"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/saveViewRouteSelected"
        app:layout_constraintEnd_toStartOf="@id/titleViewRouteSelected"
        app:layout_constraintStart_toEndOf="@id/secondsViewRouteSelected"
        app:layout_constraintTop_toBottomOf="@id/mapViewRouteSelected" />

    <EditText
        android:id="@+id/titleViewRouteSelected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/route_title"
        android:textAlignment="center"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/saveViewRouteSelected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/secViewRouteSelected"
        app:layout_constraintTop_toBottomOf="@id/mapViewRouteSelected"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/distanceViewRouteSelected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/distance"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveViewRouteSelected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minutesViewRouteSelected" />

    <Button
        android:id="@+id/saveViewRouteSelected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/LightGrey"
        android:text="@string/save_route"
        android:textColor="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/distanceViewRouteSelected"
        app:layout_constraintTop_toBottomOf="@id/secondsViewRouteSelected" />



</androidx.constraintlayout.widget.ConstraintLayout>